# Intrada

./: .cursorignore  .cursorrules  .env.example  .env.local  .gitignore  Cargo.toml  Claude.MD  Crux.toml  Makefile  README.md  appwrite.json  build-and-typegen.sh  buildServer.json  clippy.toml  dev-quick.sh  dev-start.sh  docker-compose.yml  env.template  launch-ios.sh  rust-toolchain.toml  rustfmt.toml  study_session_time_tracking_design.md  typegen.sh  validate-changes.sh  vercel.json
.continue/rules/: new-rule.md
.cursor/: settings.json
.github/: crux-config.yml
.github/actions/cache-cargo-build/: action.yml
.github/actions/setup-cargo-tools/: action.yml
.github/actions/setup-rust/: action.yml
.github/scripts/: detect-environment.sh  generate-ios-config.sh  setup-appwrite-project.sh
.github/workflows/: appwrite-ci.yml  appwrite-ci.yml.disabled  appwrite-setup.yml  ci.yaml  deploy-appwrite.yml  ios-build.yml.disabled  main-ci-optimized.yml  main-ci.yml  main.yml  sqlx-cache-update.yml  test-crux-setup.yml
.sqlx/: query-26e60ce438fc80364e60f089caac25a667da1b57d7f87dc9d56aab01c41d5b55.json  query-63ff89ca9eba5536ccd6bed209bbeca34aa1fa95576ecb0cc288402bb842a7fa.json  query-bf3680793e296e4e653a2fb3250f42e718a85d2838acbef08aa59a29e9068ceb.json
.zed/: format.sh  settings.json  tasks.json
docs/: APPWRITE_INFRASTRUCTURE.md  CLI.md  CRUX_DEPENDENCY.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_WORKFLOWS.md  IOS_TESTING.md  LOCAL_DEVELOPMENT.md  PRECOMMIT_HOOKS.md  QUICKSTART.md  README.md  TYPE_GENERATION.md  configuration.md
iOS/: build-and-run.sh  project.yml  project.yml.backup
iOS/Intrada/: AppwriteService.swift  Config.plist.template  ConfigurationManager.swift  ContentView.swift  ExerciseFormView.swift  ExercisesView.swift  FormValidation.swift  GeneratedConfig.swift  GoalDetailView.swift  GoalFormView.swift  GoalsView.swift  HomeVIew.swift  HomeView.swift  IntradaApp.swift  LocalStore.swift  ProfileView.swift  README_CONFIG.md  SearchView.swift  SessionsView.swift  SharedComponents.swift  Theme.swift  core.swift  http.swift
iOS/Intrada.xcodeproj/: project.pbxproj
iOS/Intrada/App/: ContentView.swift  IntradaApp.swift  Theme.swift
iOS/Intrada/Components/: DashboardComponents.swift  SessionComponents.swift
iOS/Intrada/Core/: CloudKitSync.swift  Core.swift  LocalStore.swift  SessionStateHelpers.swift  StorageHelpers.swift
iOS/Intrada/Core/Configuration/: Config.plist  (+1 more)
iOS/Intrada/Excercise/: ExerciseDetailView.swift  ExerciseFormView.swift  ExercisesView.swift
iOS/Intrada/Goal/: GoalBuilder.swift  GoalDetailView.swift  GoalFormView.swift  GoalsView.swift
iOS/Intrada/Profile/: ProfileView.swift
iOS/Intrada/Resources/: Info.plist
iOS/Intrada/Session/: ActiveSessionDetailView.swift  DynamicTimerView.swift  QuickStartSessionView.swift  SessionDetailComponents.swift  SessionDetailView.swift  SessionFormView.swift  SessionReflectionForm.swift  SessionTimer.swift  SessionsView.swift
iOS/Intrada/Study/: StudiesView.swift  StudyDetailView.swift  StudyFormView.swift
iOS/Intrada/ViewModels/: SessionViewModel.swift
infrastructure/: Cargo.toml  appwrite-generated
infrastructure/src/: lib.rs  migrations.rs  schema.rs
scripts/: README.md  check-ci.sh  check-code.sh  ci-migration.sh  setup-appwrite-complete.sh  setup-crux.sh  setup-local-appwrite.sh  setup-platforms-simple.sh  teardown-local-appwrite.sh  test-ios-production.sh  validate-ci-optimization.sh  validate-ci.sh  validate-workflow.sh
server/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.optimized  README.md  build-and-run.sh  cleanup-db.sh  docker-compose.yml  fly.toml  reset-db.sh  seed-db.sh  setup-dev.sh
server/.sqlx/: query-15e0bc32dae28d2371530b82fed4e38cc6ba6dc1a178c1f8ea28335cf9c0fc78.json  query-2a4ef143564598936ef45cc29d60329406a73b2700685f26ca8c77950267f5b0.json  query-363ff4068ac6815f7b6956debf0b13cfaf49ac87a500488487cbec2134dbc401.json  query-d55b5165eef5f459d56b98f178942e899c7885003c5a917d071b4a2392f7d1cc.json  query-d8020b423743a6ea5e6472dafac108f8d6feceee497591440aeb236555819c40.json  query-de379b52c581686ad84bece97d50248988a46cbd81f78b02edfa8a333042a333.json  query-ec42b73c45a902b5891b593c1c64d13c45909edced40bd58d09c1e4850608107.json  query-f0c262f01017c657a4e0f3ea52264b27a93ab9d712bb33613928eb5f69efe071.json
server/migrations/: 001_create_goals_table.sql  002_create_studies_table.sql  003_create_sessions_table.sql  004_add_duration_to_sessions.sql
server/src/: database.rs  goals.rs  main.rs  repository.rs  sessions.rs  studies.rs
server/src/database/: migration.rs
server/src/database/entities/: goal.rs
server/src/database/migration/: m20240101_000001_create_goals_table.rs
server/src/services/: goals.rs
shared/: .gitignore  Cargo.toml  uniffi.toml
shared/src/: app.rs  dev.rs  ffi.rs  lib.rs  middleware.rs
shared/src/app/: app.rs  dev.rs  error.rs  exercise.rs  exercise_record.rs  goal.rs  http_utils.rs  model.rs  repository.rs  session.rs  study.rs  study_record.rs  study_session.rs  test_utils.rs  utils.rs
shared_types/: Cargo.toml  build.rs  serde_swift_template.swift
shared_types/src/: lib.rs
test-server/: Cargo.toml  README.md
test-server/src/: main.rs
web-dioxus/: Cargo.toml  Dioxus.toml  index.html  vercel.json
web-dioxus/assets/styling/: main.css
web-dioxus/src/: main.rs
web-dioxus/src/components/: mod.rs  navbar.rs
web-dioxus/src/views/: home.rs  mod.rs
web-leptos/: Cargo.toml  Trunk.toml  dev.sh  fix-vercel-config.sh  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
web-leptos/src/: core.rs  hooks.rs  lib.rs  main.rs  state.rs
web-leptos/src/components/: goal_card.rs  goals.rs  header.rs  inputs.rs  layout.rs  menu.rs  mod.rs  nav.rs  typography.rs
web-leptos/src/hooks/: mod.rs
web-leptos/src/views/: create_goal.rs  exercises.rs  goal.rs  goals.rs  home.rs  mod.rs  profile.rs  routines.rs  sessions.rs  settings.rs  studies.rs
web-leptos/style/: main.css
web-leptos/web-leptos.xcodeproj/: project.pbxproj
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
(+27 files in other folders)
