[workspace]
members = ["shared", "shared_types", "web-leptos"]
resolver = "1"

[workspace.package]
authors = ["Jon yardley"]
edition = "2021"
repository = "https://github.com/jonyardley/intrada"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.76"

[workspace.dependencies]
anyhow = "1.0.95"
crux_core = "0.13.1"
serde = "1.0.217"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
