[workspace]
members = ["shared", "server", "shared_types", "xtask"] # "web-leptos" - parked
resolver = "2"

[workspace.package]
authors = ["Jon yardley"]
edition = "2021"
repository = "https://github.com/jonyardley/intrada"
license = "Apache-2.0"
keywords = ["crux", "crux_core", "cross-platform-ui", "ffi", "wasm"]
rust-version = "1.80"

[workspace.dependencies]
crux_core = "0.16.0"
crux_http = "0.15.0"
anyhow = "1.0.98"
serde = "1.0.219"

[workspace.metadata.bin]
cargo-xcode = { version = "=1.7.0" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
