[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "infrastructure"

[[bin]]
name = "appwrite_cli"
required-features = ["cli"]

[features]
cli = ["clap"]

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.4", features = ["derive"], optional = true }

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
