[package]
name = "intrada-server"
version = "0.1.0"
edition = "2024"
default-run = "intrada-server"

[lib]
name = "intrada_server"
path = "src/lib.rs"

[[bin]]
name = "intrada-server"
path = "src/main.rs"

[[bin]]
name = "migrator"
path = "src/bin/migrator.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "chrono",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"

# Local dependencies
shared = { path = "../shared" }
