[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.5.0"
uniffi = "0.29.2"
wasm-bindgen = "0.2.100"
uuid = { version = "1.7.0", features = ["v4", "serde", "js"] }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.29.2", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.2", features = ["build"] }
