[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[[bin]]
name = "crux_cli"
required-features = ["cli"]

[features]
cli = ["crux_core/cli"]

[dependencies]
crux_core.workspace = true
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.5.0"
uniffi = "0.29.3"
wasm-bindgen = "0.2.100"
uuid = { version = "1.7.0", features = ["v4", "serde", "js"] }
chrono = "0.4.41"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
uniffi = "0.29.3"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.100"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
