[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[lib]
name = "shared"
# Use lib by default to avoid filename collisions
# staticlib needed for iOS Swift bindings
crate-type = ["lib", "staticlib"]

[[bin]]
name = "crux_cli"
required-features = ["cli"]

[[bin]]
name = "uniffi-bindgen"
required-features = ["uniffi/cli"]

[features]
cli = ["crux_core/cli"]
facet_typegen = ["crux_core/facet_typegen"]

[dependencies]
crux_core = { workspace = true }
crux_http = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
uniffi = { version = "0.29.3", features = ["cli"] }
log = "0.4"
wasm-bindgen = "0.2.100"
uuid = { version = "1.7.0", features = ["v4", "serde", "js"] }
chrono = "0.4.41"
facet = "0.28.0"


[target.'cfg(not(target_family = "wasm"))'.dependencies]
uniffi = { version = "0.29.3", features = ["cli"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.70"

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }

