[package]
name = "web-dioxus"
version = "0.1.0"
authors = ["jonyardley"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.3", features = ["router"] }
console_error_panic_hook = "0.1.7"
dioxus-logger = "0.6.2"
futures-util = "0.3.31"
shared = { path = "../shared" }
tracing = "0.1.41"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
