[package]
name = "web-leptos"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.7.7", features = ["csr"] }
leptos_config = "0.7.7"
leptos_hot_reload = "0.7.8"
leptos_router = "0.7.7"
log = "0.4.25"
reactive_stores = "0.1.7"
reactive_stores_macro = "0.1.7"
shared = { path = "../shared" }

[dev-dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.42"
web-sys = "0.3.70"
