[package]
name = "web-leptos"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.70"
leptos = { version = "0.7.8", features = ["csr"] }
leptos_config = "0.7.8"
leptos_hot_reload = "0.7.8"
leptos_meta = "0.7.8"
leptos_router = "0.7.8"
log = "0.4.25"
reactive_stores = "0.1.7"
reactive_stores_macro = "0.1.7"
shared = { path = "../shared" }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["HtmlElement"] }
chrono = "0.4.34"
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-test = "0.3.42"
